css grid fixes for proper heights and scrollbar in wimbledon page

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,14 @@
 #root {
   background: var(--root-bg);
-  padding: 1rem;
+  padding: 0.5rem;
   min-height: 100vh;
   place-content: center;
-}
-
-@media screen and (min-width: 480px) {
-  #root {
-    padding: 4rem;
-  }
 }
 
 .app {
   height: 700px;
   min-width: 380px;
-  max-width: 980px;
+  max-width: 480px;
   margin: 0 auto;
   background: var(--app-bg);
   color: var(--app-fg);
@@ -24,6 +18,19 @@
   border-radius: var(--border-radius-lg);
   font-family: var(--font-family);
   font-size: 1rem;
+
+  @media (min-width: 480px) {
+    max-width: 600px;
+  }
+
+  @media (min-width: 980px) {
+    max-width: 1280px;
+  }
+}
+
+.app * {
+  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track, transparent);
 }
 
 .pageSwitcher {
