--- a/src/pages/PremierLeague/PremierLeague.module.css
+++ b/src/pages/PremierLeague/PremierLeague.module.css
@@ -64,7 +64,7 @@
 .gridContent {
   grid-row: 2;
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-rows: repeat(2, auto) 1fr;
   gap: 1rem;
   padding: 1rem;
   overflow-y: auto;
@@ -72,6 +72,7 @@
 
 @media (min-width: 980px) {
   .gridContent {
+    grid-template-rows: 1fr;
     grid-template-columns: repeat(3, 1fr);
     overflow-y: unset;
   }
